# swc-plugin-svg-component

./: Cargo.toml  README.md  package-lock.json  package.json  swcrc.js  turbopack.js  vite.d.ts  vite.js
scripts/: dist.js
src/: lib.rs  util.rs
src/transform/: mod.rs  svg_component_visitor.rs
