[package]
name = "swc_plugin_svg_component"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
swc_core = { version = "30.0", features = ["ecma_plugin_transform", "ecma_parser", "ecma_ast"] }
swc_common = { version = "13.0" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = "symbols"
